--- a/20_nativeSpeechRecognition/index.html
+++ b/20_nativeSpeechRecognition/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <style>
-        /* TODO Implemet CSS */
+        /* TODO implement css Implemet CSS */
 
         html {
             font-size: 10px;
