--- a/21_geolocation/index.html
+++ b/21_geolocation/index.html
@@ -35,7 +35,7 @@
     </h1>
 
     <style>
-        /* TODO Implemet CSS */
+        /* TODO implement css Implemet CSS */
         html {
             font-size: 100px;
         }
