--- a/26_stripFollowAlongNav/index.html
+++ b/26_stripFollowAlongNav/index.html
@@ -76,7 +76,7 @@
   </nav>
 
   <style>
-    /* TODO */
+    /* TODO implement css */
     html {
       box-sizing: border-box;
       font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif
